@@ -51,6 +51,7 @@ public class LocalStepRunner implements Callable<Throwable>
 
   private final StreamGraph graph;
   private final Collection<Duct> heads;
+  private Throwable throwable = null;
 
   public LocalStepRunner( FlowProcess<Properties> flowProcess, LocalFlowStep step )
     {
@@ -74,6 +75,11 @@ public class LocalStepRunner implements Callable<Throwable>
     return successful;
     }
 
+  public Throwable getThrowable()
+    {
+    return throwable;
+    }
+
   @Override
   public Throwable call() throws Exception
     {
@@ -87,33 +93,47 @@ public class LocalStepRunner implements Callable<Throwable>
         }
       catch( Throwable currentThrowable )
         {
-        LOG.error( "unable to prepare operation graph", currentThrowable );
+        if( !( currentThrowable instanceof OutOfMemoryError ) )
+          LOG.error( "unable to prepare operation graph", currentThrowable );
 
         complete = true;
         successful = false;
+        throwable = currentThrowable;
 
-        return currentThrowable;
-        }
-
-      Throwable throwable = null;
-      List<Future<Throwable>> futures = spawnHeads();
-
-      for( Future<Throwable> future : futures )
-        {
-        throwable = future.get();
-
-        if( throwable != null )
-          break;
+        return throwable;
         }
 
       try
         {
-        attemptedCleanup = true;
-        graph.cleanup();
+        List<Future<Throwable>> futures = spawnHeads();
+
+        for( Future<Throwable> future : futures )
+          {
+          throwable = future.get();
+
+          if( throwable != null )
+            break;
+          }
         }
       catch( Throwable currentThrowable )
         {
-        LOG.error( "unable to cleanup operation graph", currentThrowable );
+        if( !( currentThrowable instanceof OutOfMemoryError ) )
+          LOG.error( "unable to complete step", currentThrowable );
+
+        throwable = currentThrowable;
+        }
+
+      try
+        {
+        attemptedCleanup = true; // set so we don't try again regardless
+
+        if( !( throwable instanceof OutOfMemoryError ) )
+          graph.cleanup();
+        }
+      catch( Throwable currentThrowable )
+        {
+        if( !( currentThrowable instanceof OutOfMemoryError ) )
+          LOG.error( "unable to cleanup operation graph", currentThrowable );
 
         if( throwable == null )
           throwable = currentThrowable;
@@ -133,7 +153,13 @@ public class LocalStepRunner implements Callable<Throwable>
         }
       catch( Throwable currentThrowable )
         {
-        LOG.error( "unable to cleanup operation graph", currentThrowable );
+        if( !( currentThrowable instanceof OutOfMemoryError ) )
+          LOG.error( "unable to cleanup operation graph", currentThrowable );
+
+        if( throwable == null )
+          throwable = currentThrowable;
+
+        successful = false;
         }
       }
     }
