@@ -21,6 +21,7 @@
 package cascading;
 
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -541,5 +542,89 @@ public class RegressionPipesPlatformTest extends PlatformTestCase
     Flow flow = getPlatform().getFlowConnector().connect( source, sink, pipe );
 
     flow.complete();
+    }
+
+  @Test
+  public void testOOMEPreGroup() throws Exception
+    {
+    copyFromLocal( inputFileApache );
+
+    Tap source = getPlatform().getTextFile( inputFileApache );
+
+    Pipe pipe = new Pipe( "test" );
+
+    pipe = new Each( pipe, new Fields( "line" ), new TestFunction( new Fields( "insert" ), null )
+    {
+    @Override
+    protected void throwIntentionalException()
+      {
+      throw new OutOfMemoryError( "fake error" );
+      }
+    } );
+
+    Tap sink = getPlatform().getTextFile( getOutputPath( "oomepre" ), SinkMode.REPLACE );
+
+    Flow flow = getPlatform().getFlowConnector().connect( source, sink, pipe );
+
+    try
+      {
+      flow.complete();
+      fail( "no failure thrown" );
+      }
+    catch( Throwable exception )
+      {
+      System.out.println( "exception = " + exception );
+      exception.printStackTrace();
+      if( !getPlatform().isMapReduce() )
+        assertTrue( exception instanceof OutOfMemoryError );
+      }
+    }
+
+  @Test
+  public void testOOMEPostGroup() throws Exception
+    {
+    getPlatform().copyFromLocal( inputFileLower );
+    getPlatform().copyFromLocal( inputFileUpper );
+
+    Tap sourceLower = getPlatform().getTextFile( new Fields( "offset", "line" ), inputFileLower );
+    Tap sourceUpper = getPlatform().getTextFile( new Fields( "offset", "line" ), inputFileUpper );
+
+    Map sources = new HashMap();
+
+    sources.put( "lower", sourceLower );
+    sources.put( "upper", sourceUpper );
+
+    Tap sink = getPlatform().getTextFile( new Fields( "line" ), getOutputPath( "oomepost" ), SinkMode.REPLACE );
+
+    Function splitter = new RegexSplitter( new Fields( "num", "char" ), " " );
+
+    Pipe pipeLower = new Each( new Pipe( "lower" ), new Fields( "line" ), splitter );
+    Pipe pipeUpper = new Each( new Pipe( "upper" ), new Fields( "line" ), splitter );
+
+    Pipe splice = new CoGroup( pipeLower, new Fields( "num" ), pipeUpper, new Fields( "num" ), Fields.size( 4 ) );
+
+    splice = new Each( splice, Fields.NONE, new TestFunction( new Fields( "insert" ), null )
+    {
+    @Override
+    protected void throwIntentionalException()
+      {
+      throw new OutOfMemoryError( "fake error" );
+      }
+    } );
+
+    Flow flow = getPlatform().getFlowConnector().connect( sources, sink, splice );
+
+    try
+      {
+      flow.complete();
+      fail( "no failure thrown" );
+      }
+    catch( Throwable exception )
+      {
+      System.out.println( "exception = " + exception );
+      exception.printStackTrace();
+      if( !getPlatform().isMapReduce() )
+        assertTrue( exception instanceof OutOfMemoryError );
+      }
     }
   }
